plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

def minecraftTargets = [
		'26.1.2': [fabricApi: '0.154.2+26.1.2', dependency: '>=26.1.2 <26.2'],
		'26.2'  : [fabricApi: '0.154.2+26.2',   dependency: '>=26.2 <26.3']
]
def targetMinecraft = project.minecraft_version.toString()
def target = minecraftTargets[targetMinecraft]
if (target == null) {
	throw new GradleException("Unsupported minecraft_version ${targetMinecraft}; use ${minecraftTargets.keySet().join(' or ')}")
}

def wrapperCommand = System.getProperty('os.name').startsWith('Windows')
		? ['cmd', '/d', '/c', file('gradlew.bat').absolutePath]
		: [file('gradlew').absolutePath]
def buildMinecraft26_1_2 = tasks.register('buildMinecraft26_1_2', Exec) {
	commandLine wrapperCommand + ['clean', 'build', '-Pminecraft_version=26.1.2', '--console=plain']
}
def buildMinecraft26_2 = tasks.register('buildMinecraft26_2', Exec) {
	dependsOn buildMinecraft26_1_2
	commandLine wrapperCommand + ['build', '-Pminecraft_version=26.2', '--console=plain']
}
tasks.register('buildAllTargets') {
	group = 'build'
	description = 'Builds and tests every supported Minecraft target serially.'
	dependsOn buildMinecraft26_2
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = "${project.archives_base_name}-${targetMinecraft}"
}

def releaseArchiveBase = "${project.archives_base_name}-${project.mod_version}-mc${targetMinecraft}"
tasks.named('jar', Jar) {
	archiveFileName = "${releaseArchiveBase}.jar"
}

repositories {
	maven {
		name = 'Hypixel'
		url = 'https://repo.hypixel.net/repository/Hypixel/'
	}
	mavenCentral()
}

loom {
	splitEnvironmentSourceSets()

	accessWidenerPath = file("src/main/resources/waypointer.accesswidener")

	mods {
		"waypointer" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}
}

// The picture-in-picture renderer changed its constructor and render callback
// between 26.1.2 and 26.2. Keep that small boundary in a target-specific client
// source directory while the preview scene and geometry remain shared.
sourceSets.client.java.srcDir("src/client-${targetMinecraft}/java")

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${target.fabricApi}"
	implementation "net.hypixel:mod-api:${project.hypixel_mod_api_version}"

	include implementation('org.brotli:dec:0.1.2')

	testImplementation platform("org.junit:junit-bom:5.10.2")
	testImplementation 'org.junit.jupiter:junit-jupiter'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
	useJUnitPlatform()
	// Let developers feed local fixture paths through to tests that opt in via
	// @EnabledIfSystemProperty, without inheriting the whole Gradle JVM env.
	['coleweight.file'].each { prop ->
		if (System.getProperty(prop)) systemProperty prop, System.getProperty(prop)
	}
}

processResources {
	inputs.property "version", project.version
	inputs.property "minecraft_dependency", target.dependency

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version,
				"minecraft_dependency": inputs.properties.minecraft_dependency
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	withSourcesJar()

	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

tasks.named('sourcesJar', Jar) {
	archiveFileName = "${releaseArchiveBase}-sources.jar"
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}" }
	}
	from("THIRD_PARTY_NOTICES.md")
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	repositories {
	}
}
